crates/solidity/testing/snapshots/bindings_output/using/elementary_arrays/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[input.sol:3:1]
   │
 3 │ ╭─▶ using {sum} for uint[];
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ function sum(uint[] memory values) returns (uint) {}
   │          ─┬─               ───┬──  
   │           ╰──────────────────────── def: 1
   │                               │    
   │                               ╰──── def: 2
───╯
